# helix

./: .env.example  .gitignore  README.md  debug_uber_payment.py  main.py  pyproject.toml
.github/workflows/: release-desktop.yml
apps/desktop/: components.json  index.html  package.json  pnpm-lock.yaml
apps/desktop/src/: App.tsx  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: arrange-windows-dialog.tsx  auto-update-dialog.tsx  log-viewer.tsx  plugin-modules-panel.tsx  run-records.tsx  status-badge.tsx  task-log-panel.tsx
apps/desktop/src/components/ui/: input-group.tsx  (+1 more)
apps/desktop/src/hooks/: use-api-ready.ts
apps/desktop/src/lib/: api.ts
backend/: .env.example
backend/app/: main.py  run.py
backend/app/api/: routes_browsers.py  routes_task_modules.py  routes_tasks.py
backend/app/core/: config.py  paths.py
backend/app/fingerprint_browsers/: __init__.py  ads_power.py  base.py  bit_browser.py  factory.py
backend/app/schemas/: browser.py  tasks.py
backend/app/services/: browser_sessions.py  log_hub.py  log_store.py  models.py  plugin_registry.py  run_store.py  runtime_events.py  runtime_store.py  sqlite_store.py  task_control.py  task_io.py  task_runner.py
backend/app/task_modules/: __init__.py  base.py  registry.py  test_email.py
backend/app/task_modules/uber/: __init__.py  browser_helpers.py  email_worker.py  errors.py  module.py  registration_workflow.py
backend/runtime/: u-card.sqlite3
