[project]
name = "u-card"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "drissionpage>=4.1.1.2",
    "faker>=40.19.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "phone-gen>=3.0.30",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.50",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.48.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
